<resources>
    <string name="app_name">趣魔盒</string>
    <string name="string1">请输入你的体重</string>
    <string name="danwei">斤</string>
    <string name="path">http://127.0.0.1:5000</string>
    <string name="tizhong">体重计算器</string>
    <string name="tizhongtip">体重计算器,点击进入哦~</string>
    <string name="zwkf">暂未开发~</string>
    <string name="jqqd">敬请期待~</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="readnovelname">看小说</string>
    <string name="readnovelnametip">点击进入哦~</string>
    <string name="ipaddress">121.5.71.186</string>
    <string name="port">10099</string>
    <string name="wlts">网络提速</string>
    <string name="wltstip">将网络带宽提升至500M</string>
    <string name="copyright">声明:此app素材均来自互联网，如有侵权，联系开发者立即删除</string>
    <string name="fangwenrenshu">系列app总使用次数为:0次</string>
    <string name="skip">跳过</string>
    <string name="usernametest">mt,上午好!</string>
    <string name="register">注册</string>
    <string name="registertip">tip:用户名全部会转化为小写\n密码8位以上，须强度需要达到强才允许注册！</string>
    <string name="ysfz">原神辅助</string>
    <string name="yuanshenzdqd">原神抽卡分析地址（可直接在提瓦特小助手使用）</string>
    <string name="uid">uid</string>
    <string name="xiugai">修改</string>
    <string name="stop">已停止</string>
    <string name="run">已启用</string>
    <string name="runbutton">启用</string>
    <string name="stopbutton">停用</string>
    <string name="synchronousbutton">同步</string>
    <string name="savetext">保存</string>
    <string name="listtip">温馨提示，我们以uid为用户唯一标识，更改了uid的话会导致配置文件丢失，和已经启用的功能失效等等.\n程序将定时清除cookie过期的用户，如果需要再次启用，可以自行启用！</string>
    <string name="yuanshenbq">实时便筏</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="yuanshenycszstr">树脂:</string>
    <string name="yuanshenycszstr4">原粹树脂</string>
    <string name="yuanshenmrttsrc">每日委托:</string>
    <string name="yuanshendtbqstr">洞天宝钱:</string>
    <string name="yuanshenzbjbstr">周本减半:</string>
    <string name="yuanshenmrpqstr">每日派遣:</string>
    <string name="yuanshenmrttsrc4">每日委托</string>
    <string name="yuanshendtbqstr4">洞天宝钱</string>
    <string name="yuanshenzbjbstr4">周本减半</string>
    <string name="yuanshenclzb4">参量质变</string>
    <string name="yuanshentspq4">探索派遣</string>
    <string name="yuanshenckfxtitle">抽卡分析</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tips"><u>前往获取抽卡链接</u></string>
    <string name="title_tips">请在下方输入框中粘贴<u>祈愿历史记录链接</u></string>
    <string name="url_character_style">https://files.cnblogs.com/files/blogs/682374/character-style.json</string>
    <string name="url_wish_template">https://hk4e-api.mihoyo.com/event/gacha_info/api/getGachaLog?%s&amp;page=%s&amp;size=20&amp;end_id=%s</string>
    <string name="url_wish_sea_template">https://hk4e-api-os.hoyoverse.com/event/gacha_info/api/getGachaLog?%s&amp;page=%s&amp;size=20&amp;end_id=%s</string>
    <string name="pingtaiforqumohe">趣魔盒(不用打开微信，无广告)</string>
    <string name="pingtaifortiwatexiaozhushou">提瓦特小助手(好看点，广告多，得去微信小程序)</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tip">TipActivity</string>
    <string name="title_activity_cookie">CookieActivity</string>
    <string name="query">查询</string>
    <string name="generate">获取抽卡链接</string>
    <string name="cache_path">/GenshinTool/cache/</string>
    <string name="apk_path">/GenshinTool/apk/</string>
    <string name="character_title">角色活动祈愿</string>
    <string name="standard_title">常驻祈愿</string>
    <string name="weapon_title">武器活动祈愿</string>
    <string name="overview">一共 0 抽，已累计 0 抽未出金，累计 0 抽未出紫</string>
    <string name="up_five_level">up五星：</string>
    <string name="five_level">五星：</string>
    <string name="four_level">四星：</string>
    <string name="three_level">三星：</string>
    <string name="five_seq">五星出货顺序：</string>
    <string name="four_seq"><u>四星出货顺序：</u></string>
    <string name="five_avg">五星平均出货抽数为：</string>
    <string name="five_avg_up">up五星平均出货抽数为：</string>
    <string name="four_avg">四星平均出货抽数为：</string>
    <string name="empty_probability">【  】</string>
    <string name="show_four_sequence"><u>已隐藏，点击展开</u></string>
    <string name="check_new_version"><u>检查新版本</u></string>
    <string name="imitate_wish"><u>☞模拟抽卡（文字版）</u></string>
    <string name="not_wai_ratio">五星不歪率：</string>
    <string name="wai_ratio">五星已歪率：</string>
    <string name="continue_not_wai_num">最大连续不歪数：</string>
    <string name="continue_wai_num">最大连续已歪数：</string>
    <string name="yuanshenuserinfo">探索信息查询</string>
    <string name="yuanshenfuzhutip">系列小工具</string>
    <string name="app_updater_start_notification_content">start</string>
    <string name="wtsb">物体识别</string>
    <string name="pytorchyolov5tip">基于pytorch-yolov5(下线)</string>
    <string name="yuanshenycszstr42">原粹树脂</string>
    <string name="title_activity_user_photo">UserPhoto</string>
    <string name="app_desc">要看的 在这里</string>
    <string name="info_save_success">保存成功</string>
    <string name="info_addBookShelf_success">已添加到书架</string>
    <string name="info_switchNetWork_success">切换网络成功</string>
    <string name="info_chapterStatus_end">已完结</string>
    <string name="info_chapterStatus_serialize">连载中</string>
    <string name="UtilityTime_10Hour">10小时内</string>
    <string name="UtilityTime_10Minute">10分钟内</string>
    <string name="UtilityTime_11Hour">11小时内</string>
    <string name="UtilityTime_12Hour">12小时内</string>
    <string name="UtilityTime_1Hour">1小时内</string>
    <string name="UtilityTime_20Minute">20分钟内</string>
    <string name="UtilityTime_2Hour">2小时内</string>
    <string name="UtilityTime_30Minute">30分钟内</string>
    <string name="UtilityTime_3Hour">3小时内</string>
    <string name="UtilityTime_4Hour">4小时内</string>
    <string name="UtilityTime_5Hour">5小时内</string>
    <string name="UtilityTime_6Hour">6小时内</string>
    <string name="UtilityTime_7Hour">7小时内</string>
    <string name="UtilityTime_8Hour">8小时内</string>
    <string name="UtilityTime_9Hour">9小时内</string>
    <string name="UtilityTime_Day_After_Tomorrow">后天</string>
    <string name="UtilityTime_Today">今天</string>
    <string name="UtilityTime_Tomorrow">明天</string>
    <string name="UtilityTime_Week_Friday">星期五</string>
    <string name="UtilityTime_Week_Monday">星期一</string>
    <string name="UtilityTime_Week_Saturday">星期六</string>
    <string name="UtilityTime_Week_Simple_Friday">周五</string>
    <string name="UtilityTime_Week_Simple_Monday">周一</string>
    <string name="UtilityTime_Week_Simple_Saturday">周六</string>
    <string name="UtilityTime_Week_Simple_Sunday">周日</string>
    <string name="UtilityTime_Week_Simple_Thursday">周四</string>
    <string name="UtilityTime_Week_Simple_Tuesday">周二</string>
    <string name="UtilityTime_Week_Simple_Wednesday">周三</string>
    <string name="UtilityTime_Week_Sunday">星期日</string>
    <string name="UtilityTime_Week_Thursday">星期四</string>
    <string name="UtilityTime_Week_Tuesday">星期二</string>
    <string name="UtilityTime_Week_Wednesday">星期三</string>
    <string name="UtilityTime_Yesterday">昨天</string>
    <string name="UtilityTime_good_afternoon">下午好</string>
    <string name="UtilityTime_good_evening">晚上好</string>
    <string name="UtilityTime_good_morning">早上好</string>
    <string name="UtilityTime_good_noon">中午好</string>
    <string name="UtilityTime_just">刚刚</string>
    <string name="UtilityTime_one_day">一天内</string>
    <string name="UtilityTime_one_month">一月内</string>
    <string name="UtilityTime_one_month_more">一个月前</string>
    <string name="UtilityTime_one_week">一周内</string>
    <string name="UtilityTime_sdf1">yyyy-MM-dd HH:mm</string>
    <string name="UtilityTime_sdf10">yyyy</string>
    <string name="UtilityTime_sdf11">MM</string>
    <string name="UtilityTime_sdf12">yyyyMMdd</string>
    <string name="UtilityTime_sdf13">yyyy/MM/dd</string>
    <string name="UtilityTime_sdf14">yyyy年MM月dd日 HH:mm</string>
    <string name="UtilityTime_sdf15">yyyy.MM.dd</string>
    <string name="UtilityTime_sdf16">MM月dd日 HH:mm</string>
    <string name="UtilityTime_sdf17">M.dd HH:mm</string>
    <string name="UtilityTime_sdf18">HH小时mm分</string>
    <string name="UtilityTime_sdf19">yyyy-MM-dd HH:mm:ss</string>
    <string name="UtilityTime_sdf2">yyyy-MM-dd</string>
    <string name="UtilityTime_sdf20">yyyy-MM</string>
    <string name="UtilityTime_sdf21">MM-dd</string>
    <string name="UtilityTime_sdf22">yyyy年MM月</string>
    <string name="UtilityTime_sdf23">HH:mm:ss</string>
    <string name="UtilityTime_sdf24">HH时mm分ss秒</string>
    <string name="UtilityTime_sdf25">MM.dd</string>
    <string name="UtilityTime_sdf26">yyyy-MM-dd HH:mm</string>
    <string name="UtilityTime_sdf27">yyyy.MM.dd HH:mm</string>
    <string name="UtilityTime_sdf28">yyyy年MM月dd日 HH:mm:ss</string>
    <string name="UtilityTime_sdf29">MM-dd HH:mm:ss</string>
    <string name="UtilityTime_sdf3">MM月dd日截止</string>
    <string name="UtilityTime_sdf4">HH:mm</string>
    <string name="UtilityTime_sdf5">MM-dd HH:mm</string>
    <string name="UtilityTime_sdf6">MM月dd日</string>
    <string name="UtilityTime_sdf7">yyyy年MM月dd日</string>
    <string name="UtilityTime_sdf8">MM月dd日 HH:mm</string>
    <string name="UtilityTime_sdf9">yyyy.MM</string>
    <string name="UtilityTime_three_day">三天内</string>
    <string name="UtilityTime_two_day">两天内</string>
    <string name="UtilityTime_two_week">两周内</string>
    <string name="Utility_china_mobile">中国移动</string>
    <string name="Utility_china_telecom">中国电信</string>
    <string name="Utility_china_unicom">中国联通</string>
    <string name="Utility_unknown">未知数据</string>
    <string name="info_error_cancelRequest">您已取消！</string>
    <string name="info_error_download_failure">下载失败！</string>
    <string name="info_error_network">网络不给力！</string>
    <string name="info_error_request404">错误码: 404  地址不存在</string>
    <string name="info_error_request_unKnow">未知错误</string>
    <string name="info_exit_cancel">放弃</string>
    <string name="info_exit_ok">继续编辑</string>
    <string name="info_exit_unSave">内容还没保存，确定要放弃编辑吗？</string>
    <string name="info_feedback_search">面试查结果</string>
    <string name="info_json_error">解析数据失败，请检查网络是否正常</string>
    <string name="info_json_opration_faild">处理失败！</string>
    <string name="info_json_opration_succ">处理成功！</string>
    <string name="info_json_request_error">请求数据格式错误！</string>
    <string name="info_loaddata_error">加载数据失败！</string>
    <string name="info_nomore_string">没有更多了！</string>
    <string name="info_savedata_error">保存数据失败！</string>
    <string name="info_sendMessageCode_error">发送验证码失败！</string>
    <string name="info_upload_category_max">最多可以选择5个意向职位！</string>
    <string name="info_upload_error">上传失败!</string>
    <string name="info_upload_success">上传成功!</string>
    <string name="info_uplpad_error">正在上传图片，请稍等！</string>
    <string name="news_exit_twice_string">再按一次退出</string>
</resources>