<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_user_dialog_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="30dp"
    android:paddingTop="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="自动签到状态"
            android:minHeight="25dp"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/text_state_zdqd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:gravity="right"
            android:text="@string/stop"
            android:textColor="@color/red"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_stop_run_zdqd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/runbutton" />
    <Button
        android:id="@+id/btn_synchronous_zdqd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/synchronousbutton" />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/savetext" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="最好一段时间同步下cookie哦,一段时间就会过期，过期后自动签到功能会失效~\n注意：次日生效，每日1-3点自动签到。"/>

</LinearLayout>