<com.example.View.MyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFC3A9"
    android:orientation="vertical">
    <!-- 常驻祈愿 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/default_font_size"
            android:text="@string/standard_title"/>

        <TextView
            android:id="@+id/standard_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/default_color"
            android:text="@string/overview"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/standard_five_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="#D59432"
                    android:text="@string/five_level"/>

                <TextView
                    android:id="@+id/standard_four_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="#A256E1"
                    android:text="@string/four_level"/>

                <TextView
                    android:id="@+id/standard_three_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="#7396C2"
                    android:text="@string/three_level"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/standard_five_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="#D59432"
                    android:text="@string/empty_probability"/>

                <TextView
                    android:id="@+id/standard_four_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="#A256E1"
                    android:text="@string/empty_probability"/>

                <TextView
                    android:id="@+id/standard_three_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="#7396C2"
                    android:text="@string/empty_probability"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/standard_five_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/default_color"
            android:text="@string/five_avg"/>

        <TextView
            android:id="@+id/standard_four_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/default_color"
            android:text="@string/four_avg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/default_color"
                android:text="@string/five_seq"/>
            <ListView
                android:id="@+id/listviewforcz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null">
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/standard_four_seq_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/default_color"
                android:text="@string/four_seq"/>

            <TextView
                android:id="@+id/standard_four_seq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/default_color" />

        </LinearLayout>
    </LinearLayout>
</com.example.View.MyScrollView>

