<?xml version="1.0" encoding="utf-8"?>
<com.example.View.MyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFC3A9"
    android:orientation="vertical">
    <!-- 角色祈愿 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/character_title"
            android:textColor="@color/black"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/character_overviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/overview"
            android:textColor="@color/default_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/character_up_five_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/up_five_level"
                    android:textColor="#D59432" />

                <TextView
                    android:id="@+id/character_five_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/five_level"
                    android:textColor="#D59432" />

                <TextView
                    android:id="@+id/character_four_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/four_level"
                    android:textColor="#A256E1" />

                <TextView
                    android:id="@+id/character_three_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/three_level"
                    android:textColor="#7396C2" />
            </LinearLayout>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/character_up_five_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/empty_probability"
                    android:textColor="#D59432" />

                <TextView
                    android:id="@+id/character_five_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/empty_probability"
                    android:textColor="#D59432" />

                <TextView
                    android:id="@+id/character_four_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/empty_probability"
                    android:textColor="#A256E1" />

                <TextView
                    android:id="@+id/character_three_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/empty_probability"
                    android:textColor="#7396C2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-20dp"
                android:gravity="end">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="#D59432"
                        android:text="@string/not_wai_ratio"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="#D59432"
                        android:text="@string/wai_ratio"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/blue"
                        android:text="@string/continue_not_wai_num"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/purple_200"
                        android:text="@string/continue_wai_num"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/not_wai_ratio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="#D59432"
                        android:text=""/>

                    <TextView
                        android:id="@+id/wai_ratio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="#D59432"
                        android:text=""/>

                    <TextView
                        android:id="@+id/continue_not_wai_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/blue"
                        android:text=""/>

                    <TextView
                        android:id="@+id/continue_wai_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/purple_200"
                        android:text=""/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/character_five_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/five_avg"
            android:textColor="@color/default_color" />

        <TextView
            android:id="@+id/character_five_avg_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/five_avg_up"
            android:textColor="@color/default_color" />

        <TextView
            android:id="@+id/character_four_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/four_avg"
            android:textColor="@color/default_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/five_seq"
                android:textColor="@color/default_color" />

            <TextView
                android:id="@+id/character_five_seq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/default_color" />
            <ListView
                android:id="@+id/listviewforup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null">
            </ListView>

        </LinearLayout>

<!--        <com.example.View.HorizontalBarView-->
<!--            android:id="@+id/horizontalbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="10dp" />-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="600dp"-->
<!--            android:orientation="vertical">-->
<!--&lt;!&ndash;            <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/bbdfvgj"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="11ewgergertg\nefve"></TextView>&ndash;&gt;-->
<!--&lt;!&ndash;            <com.github.lzyzsd.jsbridge.BridgeWebView&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/yuanshenckupweb"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="300dp"></com.github.lzyzsd.jsbridge.BridgeWebView>&ndash;&gt;-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/character_four_seq_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/four_seq"
                android:textColor="@color/default_color" />

            <TextView
                android:id="@+id/character_four_seq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/default_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"></View>
        </LinearLayout>
    </LinearLayout>
</com.example.View.MyScrollView>

